Import of OSFAMERON/Acme-Fork-Lazy-0.02 from CPAN.
gitpan-cpan-distribution: Acme-Fork-Lazy
gitpan-cpan-version:      0.02
gitpan-cpan-path:         OSFAMERON/Acme-Fork-Lazy-0.02.tar.gz
gitpan-cpan-author:       OSFAMERON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -2,6 +2,8 @@
 abstract: 'abstract forking with lazy variables'
 author:
   - 'and LICENSE'
+build_requires:
+  Test::More: 0
 distribution_type: module
 generated_by: 'Module::Install version 0.76'
 license: perl
@@ -23,4 +25,4 @@ requires:
   YAML: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
